--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 
         .container { width: 100%; max-width: 800px; }
 
-        /* 搜索框增强 */
         .search-wrapper {
             background: var(--bg-white); border-radius: 50px; padding: 6px 6px 6px 25px;
             display: flex; box-shadow: var(--shadow-xl); margin-bottom: 35px;
@@ -49,7 +48,6 @@
 
         .result-view { display: none; animation: fadeIn 0.6s cubic-bezier(0.16, 1, 0.3, 1) forwards; }
 
-        /* 顶部卡片图标装饰 */
         .hero-stats { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 25px; }
         .stat-box { 
             background: var(--bg-white); padding: 25px; border-radius: var(--radius-xl); 
@@ -61,7 +59,6 @@
         .stat-box .value { font-size: 1.4rem; font-weight: 800; color: var(--text-dark); position: relative; z-index: 1; }
         .stat-box .value b { color: var(--primary-color); font-size: 1.7rem; }
 
-        /* 详细信息美化 */
         .detail-card { 
             background: var(--bg-white); border-radius: var(--radius-2xl); 
             box-shadow: var(--shadow-xl); overflow: hidden; margin-bottom: 30px;
@@ -70,7 +67,6 @@
         .info-row { padding: 25px 35px; border-bottom: 1px solid #f1f5f9; display: none; flex-direction: column; gap: 15px; }
         .info-label { font-size: 0.8rem; color: var(--text-light); font-weight: 800; text-transform: uppercase; letter-spacing: 1px; display: flex; align-items: center; gap: 10px; }
         
-        /* 炫酷图标颜色 */
         .ic-time { color: #f59e0b; }
         .ic-reg { color: #3b82f6; }
         .ic-dns { color: #10b981; }
@@ -80,14 +76,12 @@
         .list-item { display: flex; align-items: center; gap: 15px; font-size: 1.05rem; color: var(--text-dark); font-weight: 600; }
         .item-sub-label { font-size: 0.8rem; color: var(--text-light); width: 85px; font-weight: 500; }
 
-        /* 源码区浅色增强 */
-        .source-section { background: var(--bg-white); border-radius: var(--radius-xl); margin-bottom: 25px; border: 1px solid #f1f5f9; box-shadow: var(--shadow-xl); display: none; }
+        .source-section { background: var(--bg-white); border-radius: var(--radius-xl); margin-bottom: 25px; border: 1px solid #f1f5f9; box-shadow: var(--shadow-xl); display: none; overflow: hidden; }
         .source-title { padding: 15px 25px; background: #f8fafc; color: var(--text-light); font-size: 0.75rem; font-weight: 700; display: flex; justify-content: space-between; border-bottom: 1px solid #f1f5f9; }
         .source-content { padding: 25px; color: #475569; font-family: 'Cascadia Code', 'Consolas', monospace; font-size: 0.85rem; line-height: 1.7; white-space: pre-wrap; max-height: 400px; overflow-y: auto; }
 
         @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
         
-        /* 版权链接颜色修正 */
         footer { text-align: center; padding: 40px 0; color: var(--text-light); font-size: 0.85rem; }
         footer a { color: inherit; text-decoration: none; border-bottom: 1px solid transparent; transition: all 0.3s; }
         footer a:hover { color: var(--primary-color); border-bottom-color: var(--primary-color); }
@@ -100,9 +94,9 @@
     <div class="container">
         <header style="text-align: center; margin-bottom: 40px;">
             <div style="background: linear-gradient(135deg, var(--primary-color), var(--accent-color)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; display: inline-block;">
-                <h1 style="font-size: 2.5rem; letter-spacing: -2px; font-weight: 900;">Whois Profile</h1>
+                <h1 style="font-size: 2.5rem; letter-spacing: -2px; font-weight: 900;">域名查询</h1>
             </div>
-            <p style="color: var(--text-light); font-weight: 500; margin-top: 5px; letter-spacing: 1px;">域名全生命周期深度解析</p>
+            <p style="color: var(--text-light); font-weight: 500; margin-top: 5px; letter-spacing: 1px;">wxs.cx</p>
         </header>
 
         <div class="search-wrapper">
@@ -132,7 +126,7 @@
 
                 <div id="row-registrar" class="info-row">
                     <span class="info-label ic-reg"><i class="fas fa-id-card"></i> 注册服务商 (Registrar)</span>
-                    <div class="list-item" id="val-registrar" style="color: var(--primary-color);"></div>
+                    <div class="list-item" id="val-registrar"></div>
                 </div>
 
                 <div id="row-ns" class="info-row">
@@ -158,23 +152,20 @@
         </div>
 
         <footer>
-            <div class="copyright">©<span id="year"></span> <a href="https://www.wangxiansheng.com" title="王先生">王先生</a> 版权所有</div>
+            <div class="copyright">©<span id="year"></span> <a href="https://www.wangxiansheng.com" title="王先生工具箱">王先生</a> 版权所有</div>
         </footer>
     </div>
 
     <script>
         document.getElementById('year').textContent = new Date().getFullYear();
 
-        /**
-         * 针对 "30Y 7Mo 13D" 格式的精准转换
-         */
         function parseJsonTime(str) {
             if (!str || str === "null") return null;
-            let formatted = str.toString()
+            return str.toString()
                 .replace(/(\d+)Y/g, '<b>$1</b>年 ')
                 .replace(/(\d+)Mo/g, '<b>$1</b>月 ')
-                .replace(/(\d+)D/g, '<b>$1</b>天');
-            return formatted.trim();
+                .replace(/(\d+)D/g, '<b>$1</b>天')
+                .trim();
         }
 
         function setDisplay(id, val, isFlex = false) {
@@ -203,14 +194,12 @@
                     const d = res.data;
                     document.getElementById('resultView').style.display = 'block';
 
-                    // 1. 核心看板
                     const ageHtml = parseJsonTime(d.age);
                     if(setDisplay('box-age', ageHtml)) document.getElementById('res-age').innerHTML = ageHtml;
 
                     const remainHtml = parseJsonTime(d.remaining);
                     if(setDisplay('box-remaining', remainHtml)) document.getElementById('res-remaining').innerHTML = remainHtml;
 
-                    // 2. 时间节点
                     const timeList = document.getElementById('list-times');
                     timeList.innerHTML = '';
                     let hasTime = false;
@@ -228,11 +217,9 @@
                     });
                     setDisplay('row-times', hasTime, true);
 
-                    // 3. 注册商
                     setDisplay('row-registrar', d.registrar, true);
                     document.getElementById('val-registrar').innerText = d.registrar;
 
-                    // 4. NS & Status
                     const hasNs = d.nameServers && d.nameServers.length > 0;
                     document.getElementById('list-ns').innerHTML = hasNs ? d.nameServers.map(ns => `<div class="list-item"><i class="fas fa-link" style="font-size:10px; opacity:0.3"></i> ${ns}</div>`).join('') : '';
                     setDisplay('row-ns', hasNs, true);
@@ -241,16 +228,18 @@
                     document.getElementById('list-status').innerHTML = hasStatus ? d.status.map(s => `<div class="list-item"><i class="fas fa-check-double" style="font-size:10px; opacity:0.5"></i> ${s.text}</div>`).join('') : '';
                     setDisplay('row-status', hasStatus, true);
 
-                    // 5. 源码 (浅色增强)
                     if(d.rdapData && d.rdapData !== "null") {
                         const rdap = typeof d.rdapData === 'string' ? JSON.parse(d.rdapData) : d.rdapData;
                         document.getElementById('res-rdap').innerText = JSON.stringify(rdap, null, 2);
                         document.getElementById('rdap-box').style.display = 'block';
+                    } else {
+                        document.getElementById('rdap-box').style.display = 'none';
                     }
+
                     if(setDisplay('whois-box', d.whoisData)) document.getElementById('res-whois').innerText = d.whoisData;
 
                 }
-            } catch (err) { alert('查询请求超时，请稍后重试'); } 
+            } catch (err) { alert('查询服务响应超时'); } 
             finally { 
                 btn.innerHTML = '<i class="fas fa-bolt"></i> 查询'; 
                 btn.disabled = false;
