--- a/404.html
+++ b/404.html
@@ -159,9 +159,6 @@
     <script>
         document.getElementById('year').textContent = new Date().getFullYear();
 
-        /**
-         * 核心转换：将 10Y 1Mo 3D 转换为 10年1月3天
-         */
         function parseJsonTime(str) {
             if (!str || str === "null") return null;
             return str.toString()
@@ -182,12 +179,16 @@
             return false;
         }
 
-        async function query() {
+        async function query(isAuto = false) {
             const domain = document.getElementById('domainInput').value.trim();
             if(!domain) return;
 
-            // 更新标题：域名 + 域名查询 + 王先生查询
-            document.title = `${domain}域名查询 - 王先生查询`;
+            // 核心修改：如果不是自动加载（即用户在首页手动查询），则跳转 URL
+            if (!isAuto) {
+                history.pushState(null, null, '/' + domain);
+            }
+
+            document.title = `${domain} - 域名查询 - 王先生查询`;
 
             const btn = document.getElementById('queryBtn');
             btn.innerHTML = '<i class="fas fa-circle-notch fa-spin"></i> 查询中';
@@ -252,9 +253,6 @@
             }
         }
 
-        /**
-         * 自动识别路径并查询 (适配 GitHub Pages 404 跳转)
-         */
         function checkAutoQuery() {
             let pathDomain = window.location.pathname.split('/').filter(Boolean).pop();
             if (!pathDomain) {
@@ -263,13 +261,15 @@
 
             if (pathDomain && pathDomain.includes('.') && pathDomain.length > 3) {
                 document.getElementById('domainInput').value = pathDomain;
-                // 执行查询（query 函数内部会处理 document.title）
-                setTimeout(query, 300);
+                // 自动加载时传 true，避免重复修改地址栏
+                setTimeout(() => query(true), 300);
             }
         }
 
         document.getElementById('domainInput').addEventListener('keydown', (e) => { if(e.key === 'Enter') query(); });
         window.addEventListener('DOMContentLoaded', checkAutoQuery);
+        // 处理浏览器前进后退
+        window.addEventListener('popstate', checkAutoQuery);
     </script>
 </body>
 </html>
