--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </header>
 
         <div class="search-wrapper">
-            <input type="text" id="domainInput" placeholder="输入域名，例如 google.com" autofocus>
+            <input type="text" id="domainInput" placeholder="输入域名，例如 wangxiansheng.com" autofocus>
             <button onclick="goToQuery()"><i class="fas fa-search"></i> 查询</button>
         </div>
 
