--- a/404.html
+++ b/404.html
@@ -117,7 +117,14 @@
         footer { text-align: center; padding: 40px 0; color: var(--text-light); font-size: 0.85rem; }
         footer a { color: inherit; text-decoration: none; }
         
-        @media (max-width: 600px) { .hero-stats { grid-template-columns: 1fr; } .info-row { padding: 20px; } }
+        @media (max-width: 600px) { 
+            /* 保持并排显示，缩小间距和内边距以适应小屏幕 */
+            .hero-stats { gap: 10px; } 
+            .stat-box { padding: 15px 10px; }
+            .stat-box .value { font-size: 1.1rem; }
+            .stat-box .value b { font-size: 1.3rem; }
+            .info-row { padding: 20px; } 
+        }
     </style>
 </head>
 <body>
