--- a/index.html
+++ b/index.html
@@ -17,21 +17,41 @@
 
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
+        /* 确保 body 满屏且不可滚动 */
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             background: linear-gradient(-45deg, #f0f2f5, #e0e7ff, #f5f3ff, #f0f2f5);
             background-size: 400% 400%;
             animation: gradientBG 15s ease infinite;
-            min-height: 100vh;
-            display: flex; flex-direction: column; align-items: center; justify-content: center;
+            height: 100vh;
+            width: 100vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden; /* 防止溢出出现滚动条 */
             padding: 20px;
         }
 
         @keyframes gradientBG { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } }
 
-        .container { width: 100%; max-width: 600px; text-align: center; }
+        /* 核心布局容器 */
+        .container { 
+            width: 100%; 
+            max-width: 600px; 
+            height: 100%; /* 撑满 body */
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between; /* 顶部、中部、底部均匀分布 */
+            align-items: center;
+        }
 
-        header { margin-bottom: 40px; }
+        /* 顶部占位，使 header 和 footer 保持对称，确保搜索框在正物理中心 */
+        header { 
+            margin-top: auto; 
+            margin-bottom: 40px; 
+            text-align: center;
+        }
+
         .logo-text {
             background: linear-gradient(135deg, var(--primary-color), var(--accent-color));
             -webkit-background-clip: text;
@@ -39,9 +59,19 @@
             font-size: 3rem;
             font-weight: 900;
             letter-spacing: -2px;
+            line-height: 1.2;
+        }
+
+        /* 搜索框居中 */
+        .search-section {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .search-wrapper {
+            width: 100%;
             background: var(--bg-white);
             border-radius: 50px;
             padding: 8px 8px 8px 25px;
@@ -59,6 +89,7 @@
             outline: none;
             background: transparent;
             color: var(--text-dark);
+            min-width: 0; /* 防止 input 撑破容器 */
         }
 
         button {
@@ -70,11 +101,25 @@
             font-weight: 600;
             cursor: pointer;
             transition: opacity 0.2s;
+            white-space: nowrap; /* 强制文字不换行 */
         }
         button:hover { opacity: 0.9; }
 
-        footer { margin-top: 50px; color: var(--text-light); font-size: 0.85rem; }
+        footer { 
+            margin-top: auto; 
+            padding: 30px 0;
+            color: var(--text-light); 
+            font-size: 0.85rem; 
+            text-align: center;
+        }
         footer a { color: inherit; text-decoration: none; font-weight: 600; }
+
+        /* 适配移动端小屏幕，防止内容堆叠 */
+        @media (max-height: 500px) {
+            header { margin-bottom: 20px; }
+            .logo-text { font-size: 2rem; }
+            footer { padding: 15px 0; }
+        }
     </style>
 </head>
 <body>
@@ -85,9 +130,11 @@
             <p style="color: var(--text-light); margin-top: 10px; letter-spacing: 2px;">WXS.CX</p>
         </header>
 
-        <div class="search-wrapper">
-            <input type="text" id="domainInput" placeholder="输入域名，例如 wangxiansheng.com" autofocus>
-            <button onclick="goToQuery()"><i class="fas fa-search"></i> 查询</button>
+        <div class="search-section">
+            <div class="search-wrapper">
+                <input type="text" id="domainInput" placeholder="输入域名查询" autofocus>
+                <button onclick="goToQuery()"><i class="fas fa-search"></i> 查询</button>
+            </div>
         </div>
 
         <footer>
@@ -101,12 +148,10 @@
         function goToQuery() {
             const domain = document.getElementById('domainInput').value.trim().toLowerCase();
             if (domain) {
-                // 仅执行跳转逻辑
                 window.location.href = '/' + domain;
             }
         }
 
-        // 监听回车键
         document.getElementById('domainInput').addEventListener('keydown', (e) => {
             if (e.key === 'Enter') goToQuery();
         });
