--- a/404.html
+++ b/404.html
@@ -19,8 +19,6 @@
             --radius-xl: 1rem;
             --radius-2xl: 1.5rem;
             --shadow-xl: 0 20px 40px -10px rgba(0, 0, 0, 0.08);
-            --color-rdap: #6366f1;
-            --color-whois: #475569;
             --color-error: #ef4444;
             --color-success: #10b981;
             --color-warning: #f59e0b;
@@ -91,7 +89,6 @@
         .status-badge { font-size: 0.8rem; font-weight: 700; padding: 2px 10px; border-radius: 8px; margin-left: 5px; vertical-align: middle; }
         .badge-recent { color: var(--accent-color); background: #f5f3ff; }
         .badge-warning { color: #92400e; background: #fef3c7; }
-        .badge-expired { color: #991b1b; background: #fee2e2; }
 
         .detail-card { background: var(--bg-white); border-radius: var(--radius-2xl); box-shadow: var(--shadow-xl); overflow: hidden; margin-bottom: 30px; }
         .info-row { padding: 25px 35px; border-bottom: 1px solid #f1f5f9; display: none; flex-direction: column; gap: 15px; }
@@ -183,9 +180,15 @@
     <script>
         document.getElementById('year').textContent = new Date().getFullYear();
 
+        /**
+         * 格式化域名时间字符串
+         * @param {string} str 时间字符串 (如 "1Y2Mo3D" 或 "-5D")
+         * @param {string} type 'age' 或 'remaining'
+         */
         function parseDomainTime(str, type) {
             if (!str || str === "null" || str === "") return "-";
 
+            // 基础格式化
             let formatted = str.toString()
                 .replace(/(\d+)Y/g, '<b>$1</b>年')
                 .replace(/(\d+)Mo/g, '<b>$1</b>月')
@@ -197,17 +200,20 @@
             const dMatch = str.match(/(\d+)D/);
             const days = dMatch ? parseInt(dMatch[1]) : 0;
 
+            // 逻辑处理：域名年龄
             if (type === 'age') {
                 if (!hasY && !hasMo && days < 7) {
                     return formatted + ' <span class="status-badge badge-recent">最近注册</span>';
                 }
             }
 
+            // 逻辑处理：到期倒计时
             if (type === 'remaining') {
                 const isExpired = str.includes('-') || (str.trim() === '0D');
                 if (isExpired) {
+                    // 已过期只显示状态和时长，不显示多余徽章
                     let cleanValue = formatted.replace(/-/g, '');
-                    return '<span style="color:var(--color-error)">已过期</span> ' + cleanValue + ' <span class="status-badge badge-expired">已到期</span>';
+                    return `<span style="color:var(--color-error); font-weight:800;">已过期 ${cleanValue}</span>`;
                 }
                 if (!hasY && !hasMo && days < 7) {
                     return formatted + ' <span class="status-badge badge-warning">即将到期</span>';
